web/less/base.less
/* ... */
#content .error
{
    color: @bluetext;
}

.category
{
    padding: 10px 0px;
    
    .category-title
    {
        color: @bluetext;
        font-size: 20px;
    }
    
    .category-subtitle
    {
        font-style: italic;
    }
}

form.delete
{
    border: 2px solid red;
    padding: 10px;
}

h1, h2, h3, h4, h5
{
    color: black;
}

a:link, a:visited, a:hover, a:active
{
    color: @bluetext;
    text-decoration: underline;
}

#gallery
{
    width: 940px;
    height: 530px;
    position: relative;
    
    img
    {
        width: 940px;
        height: 530px;
    }
    
    .title-wrapper
    {
        width: 940px;
        position: absolute;
        bottom: 0px;
        left: 0px;
        color: white;
        
        background: -moz-linear-gradient(left,  rgba(0,135,200,1) 0%, rgba(0,135,200,0.7) 38%, rgba(0,135,200,0) 80%, rgba(0,135,200,0) 100%); /* FF3.6+ */
        background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,135,200,1)), color-stop(38%,rgba(0,135,200,0.7)), color-stop(80%,rgba(0,135,200,0)), color-stop(100%,rgba(0,135,200,0))); /* Chrome,Safari4+ */
        background: -webkit-linear-gradient(left,  rgba(0,135,200,1) 0%,rgba(0,135,200,0.7) 38%,rgba(0,135,200,0) 80%,rgba(0,135,200,0) 100%); /* Chrome10+,Safari5.1+ */
        background: -o-linear-gradient(left,  rgba(0,135,200,1) 0%,rgba(0,135,200,0.7) 38%,rgba(0,135,200,0) 80%,rgba(0,135,200,0) 100%); /* Opera 11.10+ */
        background: -ms-linear-gradient(left,  rgba(0,135,200,1) 0%,rgba(0,135,200,0.7) 38%,rgba(0,135,200,0) 80%,rgba(0,135,200,0) 100%); /* IE10+ */
        background: linear-gradient(to right,  rgba(0,135,200,1) 0%,rgba(0,135,200,0.7) 38%,rgba(0,135,200,0) 80%,rgba(0,135,200,0) 100%); /* W3C */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0087c8', endColorstr='#000087c8',GradientType=1 ); /* IE6-9 */

        text-transform: uppercase;
        
        .project-title
        {
            font-weight: bold;
            font-size: 100px;
            line-height: 90%;
            margin: 20px 0 0 16px;
        }
        
        .project-gallery
        {
            font-size: 20px;
            margin: 0 0 16px 16px;
            
            a
            {
                color: white;
            }
        }
    }
}

#project-slider
{
    overflow: hidden;
    width: 960px;
    height: 350px;
    margin: 25px 0;
    position: relative;
    
    #projects
    {
        padding: 0;
        margin: 0;
        position: absolute;
        white-space: nowrap;
        
        .project
        {
            margin: 0;
            padding: 0 10px;
            white-space: normal;
        }
    }
}

#gallery-slideshow
{
    .gallery-lightbox
    {
        display: none;
    }
}

#slideshow-container
{
    background-color: #3c3c3c;
    border-bottom: 8px solid #212121;
    
    #slideshow
    {
        width: 960px;
        height: 360px;
        margin: auto;
        position: relative;
        padding: 0;
        
        #image-box
        {
            position: relative;
            
            .title-wrapper
            {
                position: absolute;
                top: 0;
                left: 0;
                color: white;
                text-transform: uppercase;
                padding-left: 20px;
                text-shadow: 2px 2px 2px #000;
                
                .project-title
                {
                    font-size: 70px;
                    font-weight: bold;
                    margin-bottom: -3%;
                    
                    a
                    {
                        color: white;
                        text-decoration: none;
                    }
                    
                    a:hover
                    {
                        text-decoration: underline;
                    }
                }
                
                .project-subtitle
                {
                    font-size: 20px;
                    font-weight: 600;
                }
                
                .project-tagline
                {
                    font-size: 20px;
                    font-weight: 200;
                }
            }
        
            #current-image, #current-image img
            {
                width: 640px;
                height: 360px;
                display: inline-block;
            }
        }
        
        #carousel
        {
            
            width: 320px;
            height: 360px;
            position: absolute;
            right: 0px;
            top: 0px;
            overflow: hidden;
            
            ul
            {
                padding: 10px 0 0 0;
                margin: 0 0 0 10px;
                position: absolute;
                top: 0;
            }
            
            img, li
            {
                width: 310px;
                height: 165px;
                margin: 0;
            }
            
            li
            {
                list-style-type: none;
                padding-bottom: 10px;
            }
        }
    }
}

#projects
{    
    padding: 25px 0;
    
    .project
    {
        padding: 0px 8px;
        width: 300px;
        color: @greytext;
        
        margin: 25px 0;
        display: inline-block;
    
        img
        {
            width: 300px;
            height: 170px;
        }
        
        .title-wrapper
        {
            padding: 10px 0;
        }
        
        .project-title
        {
            font-size: 24px;
            text-transform: uppercase;
            font-weight: 600;
            color: @bluetext;
        }
        
        .project-subtitle
        {
            font-size: 18px;
        }
        
        .project-intro
        {
            font-size: 14px;
            height: 94px;
            overflow: hidden;
        }
    }
}
/* ... */

